# anvil-editor

./: .gitignore  AGENTS.md  ASYNC_WORKER_TREE_SITTER_INDEXING_PLAN.md  CONTEXT.md  DIFF_VIEWER_CORE_PLAN.md  EXTERNAL_PROJECT_DIRECTORIES_PLAN.md  GIT_DIFF_WORKFLOW_PLAN.md  GIT_VIEW_PLAN.md  INDENTATION_WHITESPACE_PLAN.md  LSP_PLAN.md  LUA_BATCH_EDIT_NEXT.md  LUA_BATCH_EDIT_PLAN.md  MARKDOWN_ATTACHMENT_WORKFLOW.md  MARKDOWN_BLOCK_PRESENTATION.md  MARKDOWN_FRONTMATTER.md  MARKDOWN_IMAGE_ASSETS.md  MARKDOWN_INTERACTION_STABILITY.md  MARKDOWN_LIFECYCLE.md  MARKDOWN_LINK_COMPLETION.md  MARKDOWN_LINK_INDEX.md  MARKDOWN_LINK_INTERACTION.md  MARKDOWN_LIVE_EDITOR_PLAN.md  MARKDOWN_LIVE_PREVIEW_BASELINE.md  MARKDOWN_MATH_PRESENTATION.md  MARKDOWN_NOTE_EMBEDS.md  MARKDOWN_OBSIDIAN_EXTENSIONS.md  MARKDOWN_PARSER_BACKEND.md  MARKDOWN_REFERENCES.md  MARKDOWN_RENAME_MAINTENANCE.md  MARKDOWN_RENDER_CACHE.md  MARKDOWN_REVEAL_UNITS.md  MARKDOWN_SEMANTIC_INLINE_RENDERING.md  MARKDOWN_SEMANTIC_LINK_RENDERING.md  MARKDOWN_SEMANTIC_MODEL.md  MARKDOWN_SEMANTIC_RENDERING.md  MARKDOWN_SOURCE_MODE.md  MARKDOWN_TABLES.md  MARKDOWN_WIDGET_INPUT.md  MARKDOWN_WRAPPING.md  POINT_OF_INTEREST_PLAN.md  (+21 more)
data/colors/: default.lua  fall.lua  light.lua  lite.lua  onedark.lua  summer.lua  textadept.lua
data/core/: cli.lua  command.lua  commandview.lua  common.lua  config.lua  contextmenu.lua  copy_feedback.lua  docview.lua  emptyview.lua  file_context.lua  global_prompt_bar.lua  http.lua  imageview.lua  ime.lua  init.lua  jitsetup.lua  keymap-macos.lua  keymap.lua  language_intelligence.lua  linewrapping.lua  logview.lua  main_tabs.lua  markdownview.lua  nagview.lua  navigation_feedback.lua  node.lua  object.lua  panes.lua  perf.lua  poi.lua  project.lua  project_paths.lua  prompt_bar_renderer.lua  range_marker.lua  repl.lua  rootpanel.lua  rootview.lua  scrollbar.lua  sidepanel.lua  start.lua  (+15 more)
data/plugins/: anvil_defaults.lua  autocomplete.lua  autoreload.lua  autorestart.lua  autosave_fast.lua  autosaveonfocuslost.lua  bracketmatch.lua  centered_editor.lua  column_guides.lua  command_slots.lua  commandview_sanitize.lua  contextmenu.lua  custom_nagview.lua  custom_welcome.lua  detectindent.lua  diffview.lua  drawwhitespace.lua  edit_location_history.lua  edit_perf_stress.lua  editor_wallpaper.lua  file_context.lua  findfile.lua  git_view.lua  global_prompt_bar_sanitize.lua  indent_guides.lua  intellij_actions.lua  intellij_find.lua  ipc.lua  language_kotlin.lua  language_lua.lua  language_md.lua  lineguide.lua  linewrapping.lua  linewrapping_deep_indent.lua  macro.lua  native_editor.lua  native_text_sandbox.lua  navigation_history.lua  perf_capture.lua  performance_hud.lua  (+27 more)
data/widget/: colorpicker.lua
docs/: d3d11-rad-live-resize-plan.md  d3d11-rad-renderer-plan.md  document-split-view-selection-middle-ground-plan.md  document-split-view-selection-plan.md  gitdiff-gutter-improvement-plan.md  native-decoration-api.md  native-fuzzy-engine-plan.md  rad-style-frame-pacing-plan.md
docs/api/: renderer.lua  system.lua
licenses/: licenses.md  tree-sitter.md
resources/: README.md  shell.html
resources/cross/: unknown-wasm32.ini
resources/icons/: icon.icns  icon.inl
resources/include/: anvil_plugin_api.h
resources/linux/: io.github.dcostap.Anvil.appdata.xml  io.github.dcostap.Anvil.desktop
resources/macos/: Info.plist.in
resources/portable/: README.md
resources/windows/: anvil.exe.manifest.in  manifest.rc
scripts/: README.md  appdmg.sh  appimage.sh  build.sh  common.sh  d3d11-smoke-test.ps1  ensure-luajit-cli.sh  fontello-config.json  generate_header.sh  install-dependencies.sh  make-universal-binaries.sh  package.sh  repackage.sh  run-local
scripts/innosetup/: innosetup.iss.in  innosetup.sh
scripts/keymap-generator/: keymap-generator.lua
scripts/lua/: README.md  pgo.lua
src/: d3d11_backend.c  d3d11_backend.h  ffiexports.c  fuzzy.c  fuzzy.h  main.c  main_com.c  markdown_extensions.c  markdown_extensions.h  markdown_parser.c  markdown_parser.h  meson.build  rencache.c  rencache.h  renderer.c  renderer.h  renwindow.c  renwindow.h  resize_diagnostics.c  resize_diagnostics.h  system_events.c  system_events.h  thread_pool.c  thread_pool.h  win32_frame.c  win32_frame.h  win32_single_instance.c  win32_single_instance.h  worker_pool.c  worker_pool.h
src/api/: api.c  api.h  canvas.c  fuzzy.c  native_text.c  process.c  renderer.c  renwindow.c  shmem.c  system.c  thread.c  tokenizer.c  treesitter.c  worker_pool.c
src/api/utils/: lxlauxlib.c
src/text/: buffer.c  buffer.h  buffer_manager.c  buffer_manager.h  decorations.c  decorations.h  editor.c  editor.h  piece_tree.c  piece_tree.h  treesitter.c  treesitter.h  treesitter_registry.c  treesitter_registry.h  undo_graph.c  undo_graph.h
src/treesitter/: languages.c  languages.h  project_file.c  project_file.h  project_index.c  project_index.h  query_cache.c  query_cache.h  service.c  service.h  snapshot.c  snapshot.h
subprojects/: sdl3.wrap  tree-sitter-c.wrap  tree-sitter-cpp.wrap  tree-sitter-kotlin.wrap  tree-sitter-markdown.wrap  tree-sitter-odin.wrap  tree-sitter.wrap  widget.wrap
subprojects/packagefiles/tree-sitter/: meson.build
subprojects/packagefiles/tree-sitter-c/: meson.build
subprojects/packagefiles/tree-sitter-cpp/: meson.build
subprojects/packagefiles/tree-sitter-kotlin/: meson.build
subprojects/packagefiles/tree-sitter-markdown/: meson.build
subprojects/packagefiles/tree-sitter-odin/: meson.build
tests/: README.md  fuzzy_test.c  run-lua-tests.sh
tests/lua/: fuzzy.lua
tools/: PERF_CAPTURE_BENCHMARKS.md  TREE_SITTER_PROJECT_INDEX_BENCHMARKS.md  analyze_frame_pacing_stats.py  anvil_edit_perf_matrix.bat  anvil_edit_perf_matrix.ps1  anvil_edit_perf_test.bat  anvil_edit_perf_test.ps1  anvil_perf_capture_file.bat  anvil_perf_capture_file.ps1  anvil_scroll_perf_test.bat  anvil_scroll_perf_test.ps1  anvil_selection_perf_test.bat  anvil_selection_perf_test.ps1  anvil_treesitter_project_index_benchmark.ps1  anvil_whitespace_perf_test.ps1  compare_anvil_screenshot.bat  compare_anvil_screenshot.ps1  update_anvil_icon.py
(+280 files in other folders)
